--- a/.github/workflows/release_build.yml
+++ b/.github/workflows/release_build.yml
@@ -2,103 +2,108 @@
 
 name: CI
 
-# Controls when the action will run. 
+# Controls when the action will run.
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
-  push:
-    branches: [ main ]
-    tags:
-      - "*"
-  pull_request:
-    branches: [ main ]
+    # Triggers the workflow on push or pull request events but only for the main branch
+    push:
+        branches: [main]
+        tags:
+            - "*"
+    pull_request:
+        branches: [main]
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+    # Allows you to run this workflow manually from the Actions tab
+    workflow_dispatch:
 
 jobs:
-  # This workflow contains a single job called "build"
-  mac_build:
-    # The type of runner that the job will run on
-    runs-on: macos-latest
+    # This workflow contains a single job called "build"
+    mac_build:
+        # The type of runner that the job will run on
+        runs-on: macos-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      - uses: actions/checkout@v2
+        # Steps represent a sequence of tasks that will be executed as part of the job
+        steps:
+            - uses: actions/checkout@v2
 
-      - name: Install Node Dependencies
-        run: npm i
+            - name: Install Node Dependencies
+              run: npm i
 
-      - name: Install Node Dependencies
-        run: npm run build
+            - name: Install UI Dependencies
+              run: |
+                  npm install -g @angular/cli 
+                  cd ui && npm i
 
-      - name: Build Electron Main
-        run: npm run build
+            - name: Build Electron Main
+              run: npm run build
 
-      # Runs a single command using the runners shell
-      - name: Package
-        run: npx electron-builder -m --publish never
+            # Runs a single command using the runners shell
+            - name: Package
+              run: npx electron-builder -m --publish never
 
-      - name: Archive production artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: macos artifacts
-          path: |
-            dist/*
-  win_build:
-    # The type of runner that the job will run on
-    runs-on: windows-latest
+            - name: Archive production artifacts
+              uses: actions/upload-artifact@v2
+              with:
+                  name: macos artifacts
+                  path: |
+                      dist/*
+    win_build:
+        # The type of runner that the job will run on
+        runs-on: windows-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      - uses: actions/checkout@v2
+        # Steps represent a sequence of tasks that will be executed as part of the job
+        steps:
+            - uses: actions/checkout@v2
 
-      - name: Install Node Dependencies
-        run: npm i
+            - name: Install Node Dependencies
+              run: npm i
 
-      - name: Install Node Dependencies
-        run: npm run build
+            - name: Install UI Dependencies
+              run: |
+                  npm install -g @angular/cli 
+                  cd ui && npm i
 
-      - name: Build Electron Main
-        run: npm run build
+            - name: Build Electron Main
+              run: npm run build
 
-      # Runs a single command using the runners shell
-      - name: Package
-        run: |
-          npx electron-builder -w --publish never
-          ls dist
-      - name: Archive production artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: windows artifacts
-          path: |
-            dist/*
-            
-  linux_build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+            # Runs a single command using the runners shell
+            - name: Package
+              run: |
+                  npx electron-builder -w --publish never
+                  ls dist
+            - name: Archive production artifacts
+              uses: actions/upload-artifact@v2
+              with:
+                  name: windows artifacts
+                  path: |
+                      dist/*
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      - uses: actions/checkout@v2
+    linux_build:
+        # The type of runner that the job will run on
+        runs-on: ubuntu-latest
 
-      - name: Install Node Dependencies
-        run: npm i
+        # Steps represent a sequence of tasks that will be executed as part of the job
+        steps:
+            - uses: actions/checkout@v2
 
-      - name: Install Node Dependencies
-        run: npm run build
+            - name: Install Node Dependencies
+              run: npm i
 
-      
-      - name: Build Electron Main
-        run: npm run build
+            - name: Install UI Dependencies
+              run: |
+                  npm install -g @angular/cli 
+                  cd ui && npm i
 
-      # Runs a single command using the runners shell
-      - name: Package
-        run: |
-          sudo apt-get install --no-install-recommends -y libopenjp2-tools
-          npx electron-builder -l --publish never
-      - name: Archive production artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: linux artifacts
-          path: |
-            dist/*
+            - name: Build Electron Main
+              run: npm run build
+
+            # Runs a single command using the runners shell
+            - name: Package
+              run: |
+                  sudo apt-get install --no-install-recommends -y libopenjp2-tools
+                  npx electron-builder -l --publish never
+            - name: Archive production artifacts
+              uses: actions/upload-artifact@v2
+              with:
+                  name: linux artifacts
+                  path: |
+                      dist/*
