--- a/.github/workflows/release_build.yml
+++ b/.github/workflows/release_build.yml
@@ -30,7 +30,9 @@ jobs:
 
             - name: Install UI Dependencies
               run: |
-                  cd ui && npm i && cd ..
+                  cd ui
+				  npm i 
+				  cd ..
 
             - name: Build Electron Main
               run: npm run build
@@ -58,7 +60,9 @@ jobs:
 
             - name: Install UI Dependencies
               run: |
-                  cd ui && npm i && cd ..
+                  cd ui
+				  npm i 
+				  cd ..
 
             - name: Build Electron Main
               run: npm run build
@@ -88,8 +92,9 @@ jobs:
 
             - name: Install UI Dependencies
               run: |
-                  cd ui && npm i && cd ..
-
+                  cd ui
+				  npm i 
+				  cd ..
             - name: Build Electron Main
               run: npm run build
 
