--- a/.github/workflows/release_build.yml
+++ b/.github/workflows/release_build.yml
@@ -46,7 +46,7 @@ jobs:
               with:
                   name: macos artifacts
                   path: |
-                      dist/*
+                      dist/*.dmg
     win_build:
         # The type of runner that the job will run on
         runs-on: windows-latest
@@ -77,7 +77,7 @@ jobs:
               with:
                   name: windows artifacts
                   path: |
-                      dist/*
+                      dist/*.exe
 
     linux_build:
         # The type of runner that the job will run on
@@ -108,4 +108,4 @@ jobs:
               with:
                   name: linux artifacts
                   path: |
-                      dist/*
+                      dist/*.AppImage
