--- a/.github/workflows/release_build.yml
+++ b/.github/workflows/release_build.yml
@@ -8,7 +8,7 @@ on:
     push:
         branches: [main]
         tags:
-            - "*"
+            - "v*"
     pull_request:
         branches: [main]
 
@@ -30,9 +30,9 @@ jobs:
 
             - name: Build UI
               run: |
-                cd ui
-                npm i 
-                cd ..
+                  cd ui
+                  npm i 
+                  cd ..
 
             - name: Build Electron Main
               run: npm run build
@@ -40,6 +40,14 @@ jobs:
             # Runs a single command using the runners shell
             - name: Package
               run: npx electron-builder -m --publish never
+
+			- name: Cache electron build
+			  uses: actions/cache@v2
+			  key: ${{GITHUB_ACTION}}-mac-package
+			  with:
+				  path: |
+				  	  dist/*.dmg
+
 
             - name: Archive production artifacts
               uses: actions/upload-artifact@v2
@@ -60,9 +68,9 @@ jobs:
 
             - name: Install UI Dependencies
               run: |
-                cd ui
-                npm i 
-                cd ..
+                  cd ui
+                  npm i 
+                  cd ..
 
             - name: Build Electron Main
               run: npm run build
@@ -72,13 +80,20 @@ jobs:
               run: |
                   npx electron-builder -w --publish never
                   ls dist
+			
+			- name: Cache electron build
+			  uses: actions/cache@v2
+			  key: ${{GITHUB_ACTION}}-windows-package
+			  with:
+				  path: |
+				  	  dist/*.exe
+
             - name: Archive production artifacts
               uses: actions/upload-artifact@v2
               with:
                   name: windows artifacts
                   path: |
                       dist/*.exe
-
     linux_build:
         # The type of runner that the job will run on
         runs-on: ubuntu-latest
@@ -92,9 +107,9 @@ jobs:
 
             - name: Install UI Dependencies
               run: |
-                cd ui
-                npm i 
-                cd ..
+                  cd ui
+                  npm i 
+                  cd ..
 
             - name: Build Electron Main
               run: npm run build
@@ -104,9 +119,52 @@ jobs:
               run: |
                   sudo apt-get install --no-install-recommends -y libopenjp2-tools
                   npx electron-builder -l --publish never
+			
+			- name: Cache electron build
+			  uses: actions/cache@v2
+			  key: ${{GITHUB_ACTION}}-linux-package
+			  with:
+				  path: |
+				  	  dist/*.AppImage
+
             - name: Archive production artifacts
               uses: actions/upload-artifact@v2
               with:
                   name: linux artifacts
                   path: |
                       dist/*.AppImage
+	create_release:
+		# The type of runner that the job will run on
+		needs: [mac_build,win_build,linux_build]
+		if: (github.event_name == 'push' && contains(github.ref, '/tags/v'))
+        runs-on: ubuntu-latest
+		steps:
+            - uses: actions/checkout@v2
+
+			- name: Cache electron build linux
+			  uses: actions/cache@v2
+			  key: ${{GITHUB_ACTION}}-linux-package
+			  with:
+				  path: |
+				  	  dist/*.AppImage
+			- name: Cache electron build mac
+			  uses: actions/cache@v2
+			  key: ${{GITHUB_ACTION}}-mac-package
+			  with:
+				  path: |
+				  	  dist/*.dmg
+			- name: Cache electron build windows
+			  uses: actions/cache@v2
+			  key: ${{GITHUB_ACTION}}-windows-package
+			  with:
+				  path: |
+				  	  dist/*.exe
+			- name: Checking build files
+			  run: ls ./dist
+
+			- name: Publishing release
+			  uses: ncipollo/release-action@v1
+			  with:
+				  artifacts: "dist/*.*"
+				  body: "Automated Release"
+				  token: ${{ secrets.GITHUB_TOKEN }}
