--- a/.github/workflows/release_build.yml
+++ b/.github/workflows/release_build.yml
@@ -87,7 +87,7 @@ jobs:
         with:
           key: ${{github.sha}}-windows-package
           path: |
-            dist/*.exe
+            dist/*
 
       - name: Archive production artifacts
         uses: actions/upload-artifact@v2
