--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-tactile
 title: Welcome to YANC's Homepage
-description: Fel free to bookmark this to keep an eye on my project
+description: Feel free to bookmark this to keep an eye on my project
 show_downloads: "true"
 
